[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Selection.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/GM2.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Challenger.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sprites/mc-anframes.png" type="Texture" id=5]
[ext_resource path="res://Scenes/TextBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Sprites/bg-anframes.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/background1.png" type="Texture" id=8]
[ext_resource path="res://Scenes/RPSSigns.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/AttackIndicator.tscn" type="PackedScene" id=10]

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="Background1" type="Sprite" parent="."]
position = Vector2( 508, 302 )
scale = Vector2( 3.15, 3.58824 )
texture = ExtResource( 8 )

[node name="Node2D" parent="." instance=ExtResource( 4 )]
position = Vector2( 190, 120 )
scale = Vector2( 3.2, 3.6 )
anim_frames = ExtResource( 7 )
hframes = 2

[node name="MoveSelect" parent="." instance=ExtResource( 1 )]
anchor_left = 0.3
anchor_top = 0.8
anchor_right = 0.7
anchor_bottom = 0.95

[node name="PlayerHealth" parent="." instance=ExtResource( 2 )]
anchor_left = 0.025
anchor_top = 0.8
anchor_right = 0.25
anchor_bottom = 0.975

[node name="OpHealth" parent="." instance=ExtResource( 2 )]
anchor_left = 0.75
anchor_top = 0.8
anchor_right = 0.975
anchor_bottom = 0.975

[node name="Opponent" parent="." instance=ExtResource( 4 )]
position = Vector2( 595, 217 )
scale = Vector2( 3, 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( -137, 212 )
scale = Vector2( 3, 3 )
anim_frames = ExtResource( 5 )

[node name="Talking" parent="." instance=ExtResource( 6 )]
anchor_left = 0.15
anchor_top = 1.8
anchor_right = 0.85
anchor_bottom = 1.95

[node name="Signs" parent="." instance=ExtResource( 9 )]
anchor_left = 0.3
anchor_top = 0.12
anchor_right = 0.7
anchor_bottom = 0.5
margin_left = -2.0
margin_top = 5.0
margin_right = -2.0
margin_bottom = 5.0

[node name="EAttackInd" parent="." instance=ExtResource( 10 )]
anchor_left = 0.85
anchor_top = 0.25
anchor_right = 0.9
anchor_bottom = 0.34

[node name="PAttackInd" parent="." instance=ExtResource( 10 )]
anchor_left = 0.1
anchor_top = 0.25
anchor_right = 0.15
anchor_bottom = 0.34
